integration test for end to end feed integration using atom feed client.